[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdss-binder-instructions"
version = "0.0.1"
description = "101"
readme = "README.md"
authors = [
    {name = "Andy Casey"}
]
dependencies = [
    "jupyter-server-proxy",
]

[project.urls]
Homepage = "https://github.com/andycasey/sdss-binder-instructions"

[project.entry-points."jupyter_serverproxy_servers"]
intro = "sdss_binder_instructions:setup"

[tool.setuptools.package-data]
sdss_binder_instructions = ["icon.ico"]
