[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdss-binder"
version = "0.0.1"
description = "Introduction to using SDSS data with BinderHub"
readme = "README.md"
authors = [
    {name = "Andy Casey"}
]
dependencies = [
    "jupyter-server-proxy",
]

[project.urls]
Homepage = "https://github.com/andycasey/sdss-binder-instructions"

[project.entry-points."jupyter_serverproxy_servers"]
sdss = "sdss_binder:setup"

[tool.setuptools.package-data]
sdss_binder = ["sdss.svg"]
